[package]
name = "json-tokenizer"
version = "1.0.1"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2018"
description="JSON parser"
license="MIT"
keywords=["json", "parser", "token", "tokenizer"]
readme = "README.md"
categories = ["data-structures", "development-tools", "encoding", "parsing"]

[dependencies]
regex = "1"